add call button + add dynamic content

--- a/public/assets/front/css/style.css
+++ b/public/assets/front/css/style.css
@@ -3811,7 +3811,8 @@ html .tie-cat-64:hover:after {
         justify-content: flex-end;
     }
 }
-@media screen and (max-width: 860px) {
+
+/* @media screen and (max-width: 860px) {
     .call-now-button {
         display: flex !important;
         background: #1a1919;
@@ -3883,7 +3884,7 @@ html .tie-cat-64:hover:after {
 }
 .call-now-button div {
     display: flex;
-}
+} */
 .sidebar,
 .sidebar .container-wrapper {
     margin-bottom: 30px;
@@ -4942,3 +4943,96 @@ q:before {
         width: 100% !important;
     }
 }
+
+
+/* css castuim made from Ibrahim 25/08/2023 for call button */
+.dUihZb {
+    bottom: 0px;
+    gap: 10px;
+    z-index: 4;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 20px;
+}
+
+.p-8 {
+	background-color: #fff;
+    padding: 16px;
+}
+.width-100 {
+    width: 100%;
+}
+.fixed {
+    position: fixed;
+    backface-visibility: hidden;
+}
+.gap-10 {
+    gap: 10px;
+}
+
+/* .mb-8 {
+    margin-bottom: 8px;
+} */
+.me-8 {
+    margin-left: 8px;
+}
+.vMiddle {
+    vertical-align: middle;
+}
+.alignItems {
+    -webkit-box-align: center;
+    align-items: center;
+}
+.justifyContent {
+    -webkit-box-pack: center;
+    justify-content: center;
+}
+input[type="submit"], input[type="button"], button, [class*="Btn"] {
+    border: 0px;
+}
+.blueBg, .blueHoverBg:hover, .blueBtn {
+    background-color: #1d8eff ;
+}
+input[type="submit"]:not(.noRipple), input[type="button"]:not(.noRipple), button:not(.noRipple), [class*="Btn"]:not(.noRipple), .ripple {
+    position: relative;
+    overflow: hidden;
+    transform: translateZ(0px) perspective(1px);
+}
+.font-19 {
+	font-size: 15px;
+	line-height: 1.1875em;
+}
+.height-55 {
+    height: 45px;
+}
+.flex {
+    display: flex;
+}
+
+.whiteBtn, .whiteBtn-2 {
+    color: #fff !important ;
+    background-color: #10b981!important;
+    border: 2px solid #10b981 !important;
+
+}
+.orangeBtn, .greenBtn, .grayBtn, .blueBtn, .whiteBtn-3, .whiteBtn, .whiteBtn-2, .fbBtn, .waBtn {
+    color: rgb(255, 255, 255);
+    border-radius: 8px;
+    text-align: center;
+    font-weight: bold;
+    width: 100%;
+}
+.chat{
+	width: 33%;
+    background-color: #115191!important;
+    border: 2px solid #115191 !important;
+
+}
+@media screen and (min-width:768px){
+    .dUihZb{
+        display: none;
+    }
+}
+/* @media screen and (max-width:768px){
+.ev-action{
+    display: none;
+    }
+} */
