--- a/public/assets/front/css/v1/style.css
+++ b/public/assets/front/css/v1/style.css
@@ -119,7 +119,7 @@ input:-moz-focusring {
 @font-face {
     font-family: Cairo-Regular;
     src: local('Cairo-Regular'),
-    url('../../fonts/Cairo-Regular.woff2')format('woff2');
+    url('../../../fonts/Cairo-Regular.woff2')format('woff2');
     font-style: normal;
     font-weight: 400;
     font-display: swap;
