--- a/public/assets/front/css/v1/style.css
+++ b/public/assets/front/css/v1/style.css
@@ -119,7 +119,7 @@ input:-moz-focusring {
 @font-face {
     font-family: Cairo-Regular;
     src: local('Cairo-Regular'),
-    url('../../../../fonts/Cairo-Regular.woff2')format('woff2');
+    url('../../../fonts/Cairo-Regular.woff2')format('woff2');
     font-style: normal;
     font-weight: 400;
     font-display: swap;
@@ -4968,9 +4968,6 @@ q:before {
     gap: 10px;
 }
 
-/* .mb-8 {
-    margin-bottom: 8px;
-} */
 .me-8 {
     margin-left: 8px;
 }
@@ -5031,96 +5028,3 @@ input[type="submit"]:not(.noRipple), input[type="button"]:not(.noRipple), button
         display: none;
     }
 }
-
-
-/* css castuim made from Ibrahim 25/08/2023 for call button */
-.dUihZb {
-    bottom: 0px;
-    gap: 10px;
-    z-index: 4;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 20px;
-}
-
-.p-8 {
-	background-color: #fff;
-    padding: 16px;
-}
-.width-100 {
-    width: 100%;
-}
-.fixed {
-    position: fixed;
-    backface-visibility: hidden;
-}
-.gap-10 {
-    gap: 10px;
-}
-
-/* .mb-8 {
-    margin-bottom: 8px;
-} */
-.me-8 {
-    margin-left: 8px;
-}
-.vMiddle {
-    vertical-align: middle;
-}
-.alignItems {
-    -webkit-box-align: center;
-    align-items: center;
-}
-.justifyContent {
-    -webkit-box-pack: center;
-    justify-content: center;
-}
-input[type="submit"], input[type="button"], button, [class*="Btn"] {
-    border: 0px;
-}
-.blueBg, .blueHoverBg:hover, .blueBtn {
-    background-color: #1d8eff ;
-}
-input[type="submit"]:not(.noRipple), input[type="button"]:not(.noRipple), button:not(.noRipple), [class*="Btn"]:not(.noRipple), .ripple {
-    position: relative;
-    overflow: hidden;
-    transform: translateZ(0px) perspective(1px);
-}
-.font-19 {
-	font-size: 15px;
-	line-height: 1.1875em;
-}
-.height-55 {
-    height: 45px;
-}
-.flex {
-    display: flex;
-}
-
-.whiteBtn, .whiteBtn-2 {
-    color: #fff !important ;
-    background-color: #10b981!important;
-    border: 2px solid #10b981 !important;
-
-}
-.orangeBtn, .greenBtn, .grayBtn, .blueBtn, .whiteBtn-3, .whiteBtn, .whiteBtn-2, .fbBtn, .waBtn {
-    color: rgb(255, 255, 255);
-    border-radius: 8px;
-    text-align: center;
-    font-weight: bold;
-    width: 100%;
-}
-.chat{
-	width: 33%;
-    background-color: #115191!important;
-    border: 2px solid #115191 !important;
-
-}
-@media screen and (min-width:768px){
-    .dUihZb{
-        display: none;
-    }
-}
-/* @media screen and (max-width:768px){
-.ev-action{
-    display: none;
-    }
-} */
